# find-like

./: .gitignore  Cargo.toml  README.md
src/: find_exact.rs  find_like.rs  lib.rs
